--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ secrets.DOCKER_USERNAME  }}/practica
+          tags: |
+            type=raw,value=build-${{ github.run_number }}
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
@@ -54,8 +56,14 @@ jobs:
         with:
           openshift_server_url: https://api.rm1.0a51.p1.openshiftapps.com:6443
           openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
-      
+      - name: Update Deployment tag
+        run: |
+          echo "Reemplazando {{ tag }} con ${{ github.run_number }}"
+          sed -i "s|{{ tag }}|${{ github.run_number }}|g" oc.yaml
+          cat oc.yaml
+
       - name: Deploy files
         run: |
           oc project lpintofsgrp-dev
           oc apply -f oc.yaml
+          oc rollout status deployment/mi-deployment
