--- a/oc.yaml
+++ b/oc.yaml
@@ -15,21 +15,11 @@ spec:
     metadata:
       labels:
         app: mi-app
-      annotations:
-        image.openshift.io/triggers:  |
-          [
-            {
-              "from": {
-                "kind": "ImageStreamTag",
-                "name": "ejercicio-codigo-s2i:latest"
-              },
-              "fieldPath": "spec.template.spec.containers[?(@.name==\"contenedor-principal\")].image"
-            }
-          ]
     spec:
       containers:
         - name: contenedor-principal
-          image: image-registry.openshift-image-registry.svc:5000/lpintofsgrp-dev/ejercicio-codigo-s2i:latest  # <-- Reemplaza con la imagen que quieras usar
+          image: lpintofsgrp/practica:build-{{ tag }}  # <-- Reemplaza con la imagen que quieras usar lpintofsgrp/practica image-registry.openshift-image-registry.svc:5000/lpintofsgrp-dev/ejercicio-codigo-s2i
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
           resources:
