--- a/oc.yaml
+++ b/oc.yaml
@@ -34,6 +34,14 @@ spec:
                 name: mi-configmap
             - secretRef:
                 name: mi-secret
+          volumeMounts:
+            - name: datos
+              mountPath: "/app/data"
+      volumes:
+        - name: datos
+          persistentVolumeClaim:
+            claimName: mi-pvc
+
 ---
 apiVersion: v1
 kind: Service
@@ -86,3 +94,16 @@ spec:
       target:
         type: Utilization
         averageUtilization: 100
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mi-pvc
+  namespace: lpintofsgrp-dev
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: gp3
