--- a/oc.yaml
+++ b/oc.yaml
@@ -7,7 +7,7 @@ metadata:
     app: mi-app
     areanegocio: tecnologia
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: mi-app
@@ -33,7 +33,27 @@ spec:
             - configMapRef:
                 name: mi-configmap
             - secretRef:
-                name: mi-secret   
+                name: mi-secret
+          startupProbe:
+            httpGet:
+              path: /startup
+              port: 3000
+            failureThreshold: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /readiness
+              port: 3000
+            failureThreshold: 5
+            initialDelaySeconds: 0
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            failureThreshold: 5
+            initialDelaySeconds: 0
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -77,7 +97,7 @@ spec:
     apiVersion: apps/v1
     kind: deployment
     name: mi-deployment
-  minReplicas: 2
+  minReplicas: 1
   maxReplicas: 5
   metrics:
   - type: Resource
